--- a/resume-angular/package.json
+++ b/resume-angular/package.json
@@ -27,12 +27,12 @@
     "@mdi/react": "^1.5.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.1",
-    "firebase": "^9.0.0",
     "jquery": "^3.6.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "firebase": "^9.0.0"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.1200.0",
